--- a/style.css
+++ b/style.css
@@ -10,4 +10,34 @@ a{
 
 body{
     background-color: #696969;
+    
+}
+
+main{
+    margin-top: 2%;
+}
+
+.banner{
+    background-color: #1C1C1C;
+    width: 100%;
+    padding: 10px;
+
+}
+
+.TitleBanner{
+    margin-left: 5%;
+   
+
+}
+
+.loginsection{
+    background-color: gray;
+    margin-left: 35%;
+    margin-right: 35%;
+    padding-top: 10px;
+}
+
+.userdatabase{
+    margin-bottom: 10px;
+    
 }
